Add npm package

--- a/mkdocs/walt/base.html
+++ b/mkdocs/walt/base.html
@@ -18,7 +18,7 @@
     {%- endblock %}
 
     {%- block styles %}
-    <link rel="stylesheet" href="{{ "styles.css"|url }}">
+    <link rel="stylesheet" href="{{ "walt.min.css"|url }}">
     {%- if config.theme.highlightjs %}
     <link rel="stylesheet" href="{{ "highlightjs/catppuccin-macchiato.min.css"|url }}" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="{{ "highlightjs/catppuccin-latte.min.css"|url }}" media="(prefers-color-scheme: light)">
